# research-agent

./: .env.example  .gitignore  CLAUDE.md  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: clean-merge-to-main.yml
assets/: pptx-template.pptx  template-en.pptx  template.pptx  template2.pptx
backend/: Dockerfile  config.py  main.py  pyproject.toml  pytest.ini
backend/agent_workflows/: events.py  hitl_workflow.py  paper_scraping.py  research_agent.py  schemas.py  slide_gen.py  summarize_and_generate_slides.py  summary_gen.py  summary_gen_w_qe.py
backend/prompts/: prompts.py
backend/services/: embeddings.py  llms.py  model_factory.py  multimodal.py  sandbox.py
backend/tests/: conftest.py
backend/tests/e2e/: test_sandbox.py
backend/tests/integration/: test_hitl_workflow.py  test_hitl_workflow_autolog.py
backend/tests/integration/test_paper_scraping/: test_1_download.py  test_2_filter.py  test_3_marker.py  test_imports.py
backend/tests/unit/: test_mlflow_v3_upgrade.py  test_multimodal.py
backend/tools/: debug_tools.py  paper_tools.py  pptx_tools.py  sandbox_tools.py
backend/utils/: file_processing.py  logger.py  tokens.py
backend/workflows/: paper_scraping.py  research_agent.py  slide_gen.py  summarize_and_generate_slides.py  summary_gen.py  summary_gen_w_qe.py  summary_using_images.py
dev-tracker/: backlog.md  error-log.md  experiment_mapping.md
dev-tracker/completed/: azure-cleanup-spec.md  dependency-cleanup-spec.md  gen-test-cases-spec.md  litellm-text-embed-spec.md  litellm-vlm-spec.md  mlflow-v3-upgrade-spec.md  nextjs-frontend-spec.md  replace-paper-discovery-pipeline-spec.md  update-tests-paper-discovery-spec.md
dev-tracker/poc/: litellm-multi-provider-chat-poc.md  llamaparse-v2-quality-poc.md  llm-sandbox-poc.md  openalex-search-comparison-poc.md  query-transformation-poc.md
docs/agent_workflows/: events.md  human-in-the-loop.md  llms_in_workflows.md  llms_in_workflows_old.md  overview.md  slide-gen-workflow.md  summary-gen-workflow.md  workflow-connections.md
docs/backend/: api-reference.md  services.md
docs/frontend/: overview.md  slide-generation-page.md
docs/getting-started/: local-demo.md  quickstart.md
docs/infrastructure/: configuration.md  deployment.md
docs/paper/: openalex-search.md  pyalex-api.md
experiments/: REPORTING_GUIDE.md
frontend/: .gitignore  Dockerfile  package-lock.json  package.json  pyproject.toml
(+104 files in other folders)
